# Infinity

./: Mohamed amorri  callbacks.c  callbacks.h  capteur.h  fonction.c  fonction.h  main.c  materiel.c  materiel.h  tree.c  tree.h
app1/: Makefile  Makefile.am  Makefile.in  app1.glade  app1.gladep.bak  config.h  config.status  configure  configure.in
app1/autom4te.cache/: output.0  requests  traces.0  traces.1
app1/po/: Makefile  Makefile.in
app1/src/: Makefile  Makefile.am  Makefile.in  app1  callbacks.c  callbacks.h  clients.txt  file.c  file.h  interface.c  interface.c.bak  interface.h.bak  main.c
app1/src/.deps/: callbacks.Po  file.Po
interdit/interdit/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  fi.glade  fi.gladep.bak
newproject/: config.status  configure.in  newproject.glade.bak  newproject.gladep.bak
newproject/autom4te.cache/: output.0  requests
newproject/po/: Makefile.in
newproject/src/: Makefile.in  callbacks.c  interface.h  marque.txt  (+2 more)
ouvrier (copie)/: Makefile  ouvrier.glade.bak
salimfinal/salimm/newproject/src/: Makefile  Makefile.am  callbacks.h  fonction.c  interface.c  newproject
salimfinal/salimm/newproject/src/.deps/: callbacks.Po
tache2/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projetannee_seche.glade.bak  projetannee_seche.gladep.bak
tache2/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h.bak  main.c  projetannee_seche
tache2/src/.deps/: fonction.Po
(+41 files in other folders)
